--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <div class="hero-section">
     <div class="hero-message">
       <p>You are on amazon.in. You can also shop on Amazon.com for millions of products with fast local delivery.
-        <a href="/"> Click here to go to amazon.in</a>
+        <a> Click here to go to amazon.in</a>
       </p>
     </div>
 
