--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
 
       <div class="language border">
-        <img src="/flag.png" height="15px">
+        <img src="flag.png" height="15px">
         <p>EN</p>
       </div>
 
